# threadpoll_cpp

./: .gitignore  CMakeLists.txt  README.md
inc/: Task.h  TaskQue.h  Thread.h  ThreadPoll.h
src/: CMakeLists.txt  Task.cpp  TaskQue.cpp  Thread.cpp  ThreadPoll.cpp
src/example/: CMakelists.txt  main.cpp
